2000-01-04    <rpr@rpr.wapit.com>

	* gw/wapbox.c: removed automatic logfile opening and instead added
	configuration variable log-file and log-level. Also added standard
	command line options identical to smsbox and bearerbox.

	* gw/wml.c: removed duplicate of 'write_variable_value' function
	(original in gwlib/utils.c)

2000-01-03    <rpr@rpr.wapit.com>

	* gw/wapbox.c (send_heartbeat): added heartbeat sending. And
	changed bearerbox port and host information to default values,
	not undefined. Patvched some files to make it work

Thu Dec 30 17:51:28 1999  Patrick Schaaf  <bof@bof.de>

	* gw/boxc.c, gwlib/http.c, gwlib/socket.{c,h}: reverted
	introduction of gw_getnameinfo() in favour of getnameinfo,
	which is now "emulated" properly.

Thu Dec 30 18:47:19 1999  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp.c: WML page is now fetched from the URL specifed in the
	Get PDU and compiled, then sent to phone. Is this a WAP gateway
	yet?

Thu Dec 30 17:55:22 1999  Lars Wirzenius  <liw@wapit.com>

	* Makefile, */Makefile: Removed from CVS, since they're supposed
	to be generated, and not included in the distribution.

1999-12-30    <rpr@rpr.wapit.com>

	* gw/smsbox.smsconf: improved documentation

	* gw/bearerbox.conf: ditto

Thu Dec 30 17:04:40 1999  Lars Wirzenius  <liw@wapit.com>

	* */Makefile, configure: Ran automake and autoconf and configure,
	thus some file re-generated.
	
	* NEWS, AUTHORS: Added empty ones. automake requires them.

Thu Dec 30 16:57:50 1999  Lars Wirzenius  <liw@wapit.com>

	* Applied patch from bof@bof.de for autoconf support. Renamed
	LICENSE to COPYING, and various other similar minor changes.

1999-12-30    <rpr@rpr.wapit.com>

	* gwlib/socket.c: added that missing reuseaddr to
	connect_with_port

	* gw/smsbox_req.c: oops, did not return all working code, now it
	should work as it did earlier

	* gw/smsc_emi.c: some little fixes to udh messages

1999-12-30    <bof@bof.de>

	* more autoconf: compiles on libc5 and libc6 Linux,